# ci_test

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
src/: main.cpp  problems.cpp  problems.h
tests/: tests.cpp
